# imagick

./: .gitignore  CMakeLists.txt  README  README.md
data/: hyw.ppm  sparse.ppm
include/: ImageLoader.hpp  ImageOps.hpp
result/: color-block-gray.pgm  color-block.hfm  hyw-50-gray.pgm  lena-128-gray.ppm  lena-256-gray.ppm  lena-512-gray.ppm
src/: ImageLoader.cpp  ImageOps.cpp  main.cpp
